<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="bananagear_title">Banana Gear</string>
    <string name="banana_about_title">About us</string>
    <string name="banana_about_summary">Why so serious?</string>
    <string name="banana_about_link">Visit and join</string>
    <string name="banana_website_title">Website</string>
    <string name="banana_website_summary">Feel free to visit our website</string>
    <string name="banana_telegram_title" translatable="false">Telegram</string>
    <string name="banana_telegram_summary">Join our community chat</string>
    <string name="banana_github_title" translatable="false">GitHub</string>
    <string name="banana_github_summary">Check out our GitHub</string>
    <string name="banana_about_info_summary">BananaDroid is an ordinary Android Custom ROM and absolutely not better than others. We try to do what we like and may give good experience for users. Please don\'t be hesitate to report any issue on your phone to our telegram group. We can\'t promise to solve your issue but we will try to figure it out.</string>
    <string name="banana_about_team">Contributors</string>
    <string name="banana_maintainer_team">Maintainers</string>
    <string name="banana_about_travarilo" translatable="false">Rizky Benggolo</string>
    <string name="banana_about_travarilo_summary">Lead Developer | Mi 11 Lite maintainer</string>
    <string name="banana_about_genkzsz11" translatable="false">Muhammad Fikri</string>
    <string name="banana_about_genkzsz11_summary">Contributor</string>
    <string name="banana_about_atharv" translatable="false">Atharv Sutar</string>
    <string name="banana_about_atharv_summary">Contributor</string>
    <string name="banana_about_AbrarNoob" translatable="false">AbrarNoob</string>
    <string name="banana_about_AbrarNoob_summary" translatable="false">POCO F3 / alioth</string>
    <string name="banana_about_BlackCat" translatable="false">AmeyaGurjar(BlackCat)</string>
    <string name="banana_about_BlackCat_summary" translatable="false">Redmi Note 11 Pro + 5G / peux | Poco X4 Pro 5G/ veux</string>
    <string name="banana_about_Andreock" translatable="false">Andreock</string>
    <string name="banana_about_Andreock_summary" translatable="false">Realme GT Neo 2 / bitra</string>
    <string name="banana_about_aepranata" translatable="false">Aditya Eka Pranata</string>
    <string name="banana_about_aepranata_summary" translatable="false">Redmi 5 / rosy</string>
    <string name="banana_about_AradheaRizky" translatable="false">Aradhea Rizky</string>
    <string name="banana_about_AradheaRizky_summary" translatable="false">Redmi K20 Pro | Mi 9T Pro / raphael</string>
    <string name="banana_about_Bratasij" translatable="false">Bratasij</string>
    <string name="banana_about_Bratasij_summary" translatable="false">Redmi Note 11 / spes</string>
    <string name="banana_about_ChiHuan" translatable="false">Chi Huan</string>
    <string name="banana_about_ChiHuan_summary" translatable="false">Redmi 8|8A|8A Dual / olives</string>
    <string name="banana_about_Curse" translatable="false">Curse</string>
    <string name="banana_about_Curse_summary" translatable="false">Redmi Note 9 Pro Global / joyeuse</string>
    <string name="banana_about_Djampt" translatable="false">Djampt</string>
    <string name="banana_about_Djampt_summary" translatable="false">Redmi Note 10 Pro / sweet</string>
    <string name="banana_about_elizabethangelalorenza" translatable="false">elizabethangelalorenza</string>
    <string name="banana_about_elizabethangelalorenza_summary" translatable="false">POCO X3 Pro / vayu</string>
    <string name="banana_about_FPSensor" translatable="false">FPSensor</string>
    <string name="banana_about_FPSensor_summary" translatable="false">Redmi Note 7 / lavender</string>
    <string name="banana_about_FrEeRuNnEr4EvEr" translatable="false">FrEeRuNnEr4EvEr</string>
    <string name="banana_about_FrEeRuNnEr4EvEr_summary" translatable="false">Samsung S10 | Samsung Note 10</string>
    <string name="banana_about_HonokaKousaka" translatable="false">HonokaKousaka</string>
    <string name="banana_about_HonokaKousaka_summary" translatable="false">Mi A1 / tissot</string>
    <string name="banana_about_MOCHA" translatable="false">MOCHA</string>
    <string name="banana_about_MOCHA_summary" translatable="false">Redmi Note 6 Pro / tulip</string>
    <string name="banana_about_Mudit" translatable="false">Mudit</string>
    <string name="banana_about_Mudit_summary" translatable="false">Poco F4 / munch</string>
    <string name="banana_about_Mrick343" translatable="false">Mrick343</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="themes_title">Themes</string>
    <string name="other_category_title">Others</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="qs_show_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="qs_footer_category">Footer</string>
    <string name="qs_footer_datausage_title">Data usage</string>
    <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
    <string name="qs_transparency_title">Background transparency</string>
    <string name="qs_transparency_summary">Set transparency level for QS background</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Animation interpolator</string>
    <string name="qs_tile_styles">QS tiles styles</string>
    <string name="qs_tile_layout_title">Tiles layout</string>
    <string name="theme_customization_font_title">Font style</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_navbar_title">Navbar style</string>
    <string name="theme_customization_navbar_summary">Set custom navigation bar style</string>
    <string name="doze_display_title">Ambient display</string>
    <string name="doze_additional_settings_title">Additional settings</string>
    <string name="doze_additional_settings_summary">Customize device specific ambient display settings</string>
    <string name="doze_sensor_title">Sensor based</string>
    <string name="raise_to_wake_title">Wake up</string>
    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>
    <string name="tilt_title">Tilt</string>
    <string name="tilt_summary">Pulse notifications on tilt</string>
    <string name="pickup_title">Pick up</string>
    <string name="pickup_summary">Pulse notifications on pick up</string>
    <string name="handwave_title">Hand wave</string>
    <string name="handwave_summary">Pulse notifications on hand wave</string>
    <string name="pocket_title">Pocket</string>
    <string name="pocket_summary">Pulse notifications on removal from pocket</string>
    <string name="doze_vibrate">Vibrate</string>
    <string name="doze_vibrate_summary">Duration to vibrate when pulsing notifications</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="gaming_mode_title">Game space</string>
    <string name="gaming_mode_summary">Extra features for immersive gaming experience</string>
    <string name="monet_engine_title">Monet engine</string>
    <string name="monet_engine_summary">Customize monet parameters</string>
    <string name="custom_ui_toggle_title">Settings dashboard style</string>
    <string name="custom_ui_toggle_summary">Enable card-style dashboard UI</string>
    <string name="about_phone_header_title">About phone header</string>
    <string name="about_phone_header_summary">Enable about phone header on Settings dashboard</string>
    <string name="theme_customization_ui_style_title">UI Style</string>
    <string name="theme_customization_ui_style_summary">Set custom style for your interface</string>
    <string name="qs_styles_title">Quick settings styles</string>
    <string name="qs_ui_title">Quick settings UI</string>
    <string name="pulse_ambient_light_category">Screen edge lighting</string>
    <string name="pulse_ambient_light_title">Edge lighting</string>
    <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="pulse_ambient_light_color_title">Custom color</string>
    <string name="pulse_ambient_light_color_mode_title">Light color</string>
    <string name="pulse_ambient_light_duration_title">Light duration</string>
    <string name="pulse_ambient_light_repeat_count_title">Light repeat count</string>
    <string name="pulse_ambient_light_show_always_title">Show always</string>
    <string name="pulse_ambient_light_show_always_summary">Show lights for all doze events and not just notifications</string>
    <string name="pulse_ambient_light_repeat_direction_title">Light repeat mode</string>
    <string name="pulse_ambient_light_layout_title">Light view</string>
    <string name="pulse_ambient_light_width_title">Light width</string>
    <string name="pulse_light_layout_style_title">Light Layout Style</string>
    <string name="ambient_notification_light_enabled_title">Show on AOD</string>
    <string name="ambient_notification_light_enabled_summary">Show lights on Always On Display</string>
    <string name="ambient_notification_light_hide_aod_title">Hide AOD content</string>
    <string name="ambient_notification_light_hide_aod_summary">Hide AOD content when lights are showing</string>
    <string name="ambient_notification_light_timeout_title">Timeout</string>
    <string name="use_tiles_on_secure_keyguard_title">Require unlocking to use sensitive tiles</string>
    <string name="use_tiles_on_secure_keyguard_summary">Ask to unlock lockscreen when using sensitive tiles</string>
    <string name="disable_qs_title">Hide QS in secure lockscreen</string>
    <string name="disable_qs_summary">Hides QS if device is locked. Does not disable notification shade</string>
    <string name="qs_header_image_title">QS header image</string>
    <string name="doze_on_charge_title">Always on when charging</string>
    <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
    <string name="brightness_slider_style_title">Brightness slider style</string>
</resources>