<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016-2021 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/doze_display_title">

    <com.banana.support.preferences.SecureSettingSwitchPreference
        android:key="doze_enabled"
        android:title="@string/doze_title"
        android:defaultValue="true"
        android:summary="@string/doze_summary" />

    <com.banana.support.preferences.SecureSettingSwitchPreference
        android:key="doze_always_on"
        android:title="@string/doze_always_on_title"
        android:defaultValue="false"
        android:summary="@string/doze_always_on_summary" />

    <com.banana.support.preferences.SystemSettingSwitchPreference
        android:key="doze_on_charge"
        android:defaultValue="false"
        android:title="@string/doze_on_charge_title"
        android:summary="@string/doze_on_charge_summary" />

    <com.banana.support.preferences.RemotePreference
        android:key="doze_device_settings"
        android:title="@string/doze_additional_settings_title"
        android:summary="@string/doze_additional_settings_summary">
        <intent
            android:action="org.lineageos.settings.device.DOZE_SETTINGS" />
    </com.banana.support.preferences.RemotePreference>

   <PreferenceCategory
        android:key="pulse_ambient_light_category"
        android:title="@string/pulse_ambient_light_category" >

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="pulse_ambient_light"
            android:title="@string/pulse_ambient_light_title"
            android:summary="@string/pulse_ambient_light_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="ambient_light_pulse_for_all"
            android:title="@string/pulse_ambient_light_show_always_title"
            android:summary="@string/pulse_ambient_light_show_always_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="ambient_notification_light_enabled"
            android:title="@string/ambient_notification_light_enabled_title"
            android:summary="@string/ambient_notification_light_enabled_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="ambient_notification_light_hide_aod"
            android:title="@string/ambient_notification_light_hide_aod_title"
            android:summary="@string/ambient_notification_light_hide_aod_summary"
            android:defaultValue="false"
            android:dependency="ambient_notification_light_enabled" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="ambient_notification_color_mode"
            android:title="@string/pulse_ambient_light_color_mode_title"
            android:entries="@array/pulse_ambient_light_color_mode_entries"
            android:entryValues="@array/pulse_ambient_light_color_mode_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.banana.support.colorpicker.ColorPickerPreference
            android:key="ambient_notification_light_color"
            android:title="@string/pulse_ambient_light_color_title"
            android:defaultValue="0xFFFFFFFF" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="pulse_light_layout_style"
            android:title="@string/pulse_light_layout_style_title"
            android:entries="@array/pulse_light_layout_style_entries"
            android:entryValues="@array/pulse_light_layout_style_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="ambient_light_layout"
            android:title="@string/pulse_ambient_light_layout_title"
            android:entries="@array/pulse_ambient_light_layout_entries"
            android:entryValues="@array/pulse_ambient_light_layout_values"
            android:summary="%s"
            android:defaultValue="1" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="pulse_ambient_light_width"
            android:title="@string/pulse_ambient_light_width_title"
            android:max="150"
            android:min="1"
            android:defaultValue="125" />

        <com.banana.support.preferences.CustomSeekBarPreference
            android:key="ambient_notification_light_duration"
            android:title="@string/pulse_ambient_light_duration_title"
            android:max="5"
            settings:min="1"
            settings:defaultValue="2"
            settings:units="sec" />

        <com.banana.support.preferences.CustomSeekBarPreference
            android:key="ambient_notification_light_repeats"
            android:title="@string/pulse_ambient_light_repeat_count_title"
            android:max="10"
            settings:min="0"
            settings:defaultValue="0" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="ambient_light_repeat_direction"
            android:title="@string/pulse_ambient_light_repeat_direction_title"
            android:entries="@array/pulse_ambient_light_repeat_direction_entries"
            android:entryValues="@array/pulse_ambient_light_repeat_direction_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="ambient_notification_light_timeout"
            android:title="@string/ambient_notification_light_timeout_title"
            android:entries="@array/ambient_notification_light_timeout_entries"
            android:entryValues="@array/ambient_notification_light_timeout_values"
            android:summary="%s"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="doze_sensor"
        android:title="@string/doze_sensor_title" >

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="doze_tilt_gesture"
            android:defaultValue="false"
            android:title="@string/tilt_title"
            android:summary="@string/tilt_summary" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="doze_pick_up_gesture"
            android:defaultValue="false"
            android:title="@string/pickup_title"
            android:summary="@string/pickup_summary" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="doze_handwave_gesture"
            android:defaultValue="false"
            android:title="@string/handwave_title"
            android:summary="@string/handwave_summary" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="doze_pocket_gesture"
            android:defaultValue="false"
            android:title="@string/pocket_title"
            android:summary="@string/pocket_summary" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="raise_to_wake_gesture"
            android:defaultValue="false"
            android:title="@string/raise_to_wake_title"
            android:summary="@string/raise_to_wake_summary" />

        <com.banana.support.preferences.SecureSettingSeekBarPreference
            android:key="doze_gesture_vibrate"
            android:title="@string/doze_vibrate"
            android:summary="@string/doze_vibrate_summary"
            android:defaultValue="0"
            settings:defaultValueText="@string/disabled"
            android:max="2000"
            settings:min="0"
            settings:interval="10"
            settings:units="@string/unit_milliseconds" />
    </PreferenceCategory>

</PreferenceScreen>
