<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2023 BananaDroid
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Smart Pixels -->
    <Preference
        android:key="smart_pixels"
        android:title="@string/smart_pixels_title" 
        android:summary="@string/smart_pixels_summary" 
        android:fragment="com.banana.settings.fragments.ui.SmartPixels" />

    <PreferenceCategory
        android:title="@string/other_category_title" >

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="click_partial_screenshot"
            android:title="@string/click_partial_screenshot_title"
            android:summary="@string/click_partial_screenshot_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <!-- Gaming mode -->
    <Preference
        android:key="gaming_mode"
        android:title="@string/gaming_mode_title"
        android:summary="@string/gaming_mode_summary">

        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="io.chaldeaprjkt.gamespace"
            android:targetClass="io.chaldeaprjkt.gamespace.settings.SettingsActivity" />
    </Preference>

    <!-- Pulse music visualizer -->
    <Preference
        android:key="pulse_settings"
        android:title="@string/pulse_settings"
        android:summary="@string/pulse_settings_summary"
        android:fragment="com.banana.settings.fragments.ui.PulseSettings" />

</PreferenceScreen>
