<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 BananaDroid

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/quicksettings_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/privacy_category_title">

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="secure_lockscreen_qs_disabled"
            android:title="@string/disable_qs_title"
            android:summary="@string/disable_qs_summary"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="use_tiles_on_secure_keyguard"
            android:title="@string/use_tiles_on_secure_keyguard_title"
            android:summary="@string/use_tiles_on_secure_keyguard_summary"
            android:dependency="secure_lockscreen_qs_disabled"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_settings_brighness_category"
        android:title="@string/qs_show_brightness_slider_title">

        <!-- Brightness slider -->
        <com.banana.support.preferences.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_show_brightness_slider_title"
            android:entries="@array/qs_show_brightness_slider_entries"
            android:entryValues="@array/qs_show_brightness_slider_values"
            android:defaultValue="1" />

        <com.banana.support.preferences.SecureSettingListPreference
            android:key="qs_brightness_slider_position"
            android:title="@string/qs_brightness_slider_position_title"
            android:entries="@array/qs_brightness_slider_position_entries"
            android:entryValues="@array/qs_brightness_slider_position_values"
            android:defaultValue="0" />

        <com.banana.support.preferences.SecureSettingListPreference
            android:key="brightness_slider_style"
            android:title="@string/brightness_slider_style_title"
            android:entries="@array/brightness_slider_style_entries"
            android:entryValues="@array/brightness_slider_style_values"
            android:defaultValue="0" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_show_auto_brightness_title"
            android:summary="@string/qs_show_auto_brightness_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_tile_styles">

        <Preference
            android:key="qs_tile_layout"
            android:title="@string/qs_tile_layout_title"
            android:summary="@string/qs_tile_layout_summary"
            android:fragment="com.banana.settings.fragments.QsTileLayoutSettings" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:defaultValue="0" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_tile_animation_duration"
            android:title="@string/qs_tile_animation_duration_title"
            android:defaultValue="1"
            settings:interval="1"
            settings:units="@string/unit_seconds"
            android:max="5"
            android:min="1" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory 
         android:title="@string/qs_footer_category">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="qs_footer_data_usage"
            android:title="@string/qs_footer_datausage_title"
            android:summary="@string/qs_footer_datausage_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_category_title">

        <!-- QS UI -->
        <com.banana.support.preferences.SystemSettingListPreference
            android:key="qs_ui_style"
            android:title="@string/qs_ui_title"
            android:entries="@array/qs_ui_entries"
            android:entryValues="@array/qs_ui_values"
            android:summary="%s"
            android:defaultValue="0" />

        <!-- QS styles -->
        <com.banana.support.preferences.SystemSettingListPreference
            android:key="qs_panel_style"
            android:title="@string/qs_styles_title"
            android:entries="@array/qs_styles_entries"
            android:entryValues="@array/qs_styles_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_header_image"
            android:title="@string/qs_header_image_title"
            android:defaultValue="0"
            settings:interval="1"
            android:max="11"
            android:min="0" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_transparency"
            android:title="@string/qs_transparency_title"
            android:summary="@string/qs_transparency_summary"
            android:defaultValue="100"
            settings:interval="1"
            settings:units="%"
            android:max="100"
            android:min="1" />

    </PreferenceCategory>
</PreferenceScreen>
